Fix Fancybox on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ body {
   background-color: white;
 }
 
+data-fancybox {
+  transition: none;
+}
+
 [class*="col-"] {
   display: flex;
   flex-wrap: wrap;
